--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+Babel==2.7.0
 certifi==2019.6.16
 chardet==3.0.4
 defusedxml==0.6.0
@@ -5,9 +6,12 @@ dj-database-url==0.5.0
 Django==2.2.2
 django-allauth==0.39.1
 django-heroku==0.3.1
+django-phonenumber-field==3.0.1
 gunicorn==19.9.0
 idna==2.8
+model-mommy==1.6.0
 oauthlib==3.0.1
+phonenumbers==8.10.13
 Pillow==6.0.0
 psycopg2==2.8.3
 psycopg2-binary==2.8.3
@@ -15,6 +19,7 @@ python3-openid==3.1.0
 pytz==2019.1
 requests==2.22.0
 requests-oauthlib==1.2.0
+six==1.12.0
 sqlparse==0.3.0
 urllib3==1.25.3
 whitenoise==4.1.2
