--- a/requirements.txt
+++ b/requirements.txt
@@ -5,20 +5,29 @@ defusedxml==0.6.0
 dj-database-url==0.5.0
 Django==2.2.2
 django-allauth==0.39.1
+django-appconf==1.0.3
+django-environ==0.4.4
 django-heroku==0.3.1
 django-phonenumber-field==3.0.1
+django-sendgrid-v5==0.8.0
+django-simple-referrals==0.2
+django-treebeard==4.3
+future==0.17.1
 gunicorn==19.9.0
 idna==2.8
 model-mommy==1.6.0
 oauthlib==3.0.1
 phonenumbers==8.10.13
 Pillow==6.0.0
+pinax-referrals==3.0.3
 psycopg2==2.8.3
 psycopg2-binary==2.8.3
+python-http-client==3.1.0
 python3-openid==3.1.0
 pytz==2019.1
 requests==2.22.0
 requests-oauthlib==1.2.0
+sendgrid==6.0.5
 six==1.12.0
 sqlparse==0.3.0
 urllib3==1.25.3
