--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
+amqp==2.5.0
+autopep8==1.4.4
 Babel==2.7.0
+billiard==3.6.0.0
+celery==4.3.0
 certifi==2019.6.16
 chardet==3.0.4
 defusedxml==0.6.0
@@ -7,28 +11,36 @@ Django==2.2.3
 django-allauth==0.39.1
 django-appconf==1.0.3
 django-avatar==4.1.0
+django-celery-beat==1.5.0
 django-environ==0.4.4
 django-heroku==0.3.1
 django-phonenumber-field==3.0.1
 django-sendgrid-v5==0.8.0
 -e git+https://github.com/ochui/django-simple-referrals.git@0af7cb21add537164bf00c33791d91682773b720#egg=django_simple_referrals
+django-timezone-field==3.0
 django-treebeard==4.3
 future==0.17.1
 gunicorn==19.9.0
 idna==2.8
+kombu==4.6.3
 model-mommy==1.6.0
 oauthlib==3.0.1
 phonenumbers==8.10.13
 Pillow==6.0.0
 psycopg2==2.8.3
 psycopg2-binary==2.8.3
+pycodestyle==2.5.0
+python-crontab==2.3.8
+python-dateutil==2.8.0
 python-http-client==3.1.0
 python3-openid==3.1.0
 pytz==2019.1
+redis==3.2.1
 requests==2.22.0
 requests-oauthlib==1.2.0
 sendgrid==6.0.5
 six==1.12.0
 sqlparse==0.3.0
 urllib3==1.25.3
+vine==1.3.0
 whitenoise==4.1.2
