--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,8 @@ django-avatar==4.1.0
 django-celery-beat==1.5.0
 django-environ==0.4.4
 django-heroku==0.3.1
+django-model-utils==3.2.0
+django-notifications-hq==1.5.0
 django-phonenumber-field==3.0.1
 django-sendgrid-v5==0.8.0
 -e git+https://github.com/ochui/django-simple-referrals.git@0af7cb21add537164bf00c33791d91682773b720#egg=django_simple_referrals
@@ -22,6 +24,7 @@ django-treebeard==4.3
 future==0.17.1
 gunicorn==19.9.0
 idna==2.8
+jsonfield==2.0.2
 kombu==4.6.3
 model-mommy==1.6.0
 oauthlib==3.0.1
