--- a/requirements.txt
+++ b/requirements.txt
@@ -21,8 +21,10 @@ django-phonenumber-field==3.0.1
 django-sendgrid-v5==0.8.0
 -e git+https://github.com/ochui/django-simple-referrals.git@0af7cb21add537164bf00c33791d91682773b720#egg=django_simple_referrals
 django-static-compress==1.2.1
+django-storages==1.7.1
 django-timezone-field==3.0
 django-treebeard==4.3
+dropbox==9.4.0
 future==0.17.1
 gunicorn==19.9.0
 idna==2.8
