--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 amqp==2.5.0
 autopep8==1.4.4
 Babel==2.7.0
+beautifulsoup4==4.8.0
 billiard==3.6.0.0
 Brotli==1.0.7
 celery==4.3.0
@@ -15,6 +16,7 @@ django-avatar==4.1.0
 django-celery-beat==1.5.0
 django-environ==0.4.4
 django-heroku==0.3.1
+django-htmlmin==0.11.0
 django-model-utils==3.2.0
 django-notifications-hq==1.5.0
 django-phonenumber-field==3.0.1
@@ -27,6 +29,7 @@ django-treebeard==4.3
 dropbox==9.4.0
 future==0.17.1
 gunicorn==19.9.0
+html5lib==1.0.1
 idna==2.8
 jsonfield==2.0.2
 kombu==4.6.3
@@ -47,8 +50,10 @@ requests==2.22.0
 requests-oauthlib==1.2.0
 sendgrid==6.0.5
 six==1.12.0
+soupsieve==1.9.2
 sqlparse==0.3.0
 urllib3==1.25.3
 vine==1.3.0
+webencodings==0.5.1
 whitenoise==4.1.2
 zopfli==0.1.6
