--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ certifi==2019.6.16
 chardet==3.0.4
 defusedxml==0.6.0
 dj-database-url==0.5.0
-Django==2.2.4
+Django==2.2.3
 django-allauth==0.39.1
 django-appconf==1.0.3
 django-avatar==4.1.0
@@ -50,6 +50,7 @@ redis==3.2.1
 requests==2.22.0
 requests-oauthlib==1.2.0
 sendgrid==6.0.5
+sentry-sdk==0.10.2
 six==1.12.0
 soupsieve==1.9.2
 sqlparse==0.3.0
