--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ django-infinite-scroll-pagination==1.0.0
 django-model-utils==3.2.0
 django-notifications-hq==1.5.0
 django-phonenumber-field==3.0.1
+django-redirect-to-non-www==0.1.1
 django-robots==3.1.0
 django-sekizai==1.0.0
 django-sendgrid-v5==0.8.0
